<resources>
    <string name="app_name">RTC SOLUTIONS</string>
    <string name="iniciemos">¡Iniciemos!</string>
    <string name="continuarGoogle">Continuar con Google</string>
    <string name="slogan">Soluciones tecnológicas para todos!</string>
    <string name="slogan2">Contacta a nuestros socios para que tus espacios estén  impecables.</string>
    <string name="continuarCorreo">Acceder con Correo</string>
    <string name="bienvenida">¡Bienvenido de Vuelta!</string>
    <string name="msj1">Inicia Sesión en tu cuenta.</string>
    <string name="msj2">¿No tienes cuenta?</string>

    <!--Strings cortos-->
    <string name="registrarse">Registrarse</string>
    <string name="acceder">Acceder</string>
    <string name="bienv">Bienvenido</string>
    <string name="crearCuenta">Crea tu Cuenta</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Servicios que Ofrecemos</string>
    <string name="menu_slideshow">Ver Servicios</string>
    <string name="menu_registrar">Brindar Mis Servicios</string>
    <string name="msj3_falla_registro">Hubo un error en el registro de su cuenta.</string>
    <string name="msj4_faltan_campos">¡Campos Incompletos!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> </string>

    <!--TEXTOS DEL FORMULARIO DE BRINDAR MIS SERVICIOS -->
    <string name="msg_cedula">Digite su cedula de identificacion</string>
    <string name="msg_nombre">Nombre</string>
    <string name="msg_apellidoPaterno">Apellido </string>
    <string name="msg_apellidoMaterno">Digite el appellido materno</string>
    <string name="msg_edad">Edad </string>
    <string name="msg_correo">Digite el correo electronico </string>
    <string name="msg_telefono">Numero telefonico </string>
    <string name="msg_servicios">Servicios a brindar </string>
    <string name="msg_visualizarservicios">Contactar Servicio</string>
    <string name="msg_experiencia">Experiencia </string>
    <string name="msg_precio">Monto por hora </string>
    <string name="bt_agregar">Registrar mis Servicios</string>
    <string name="msg_titulo">Brindar mis servicios</string>
    <string name="msg_imagen">Foto </string>
    <string name="msgServiciosAgregado">Se a registrado correctamente</string>
    <string name="msgFaltanDatos">Faltan Datos</string>
    <string name="msg_enviar_mensaje">Enviar mensaje por whatsapp</string>
    <string name="msg_llamar">Llamar a la persona</string>
    <string name="msg_datos">No hay numero telefonico</string>
    <string name="msg_saludos">¡Hola ví tu anuncio en RTC! Me gustaría contratar tu servicio…</string>
    <string name="todo">Icono del app</string>
    <string name="msg_subiendo_registro">Subiendo datos</string>

</resources>