<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rtc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.rtc.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.rtc.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_visualizarFragment"
            app:destination="@id/visualizarFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrarFragment"
        android:name="com.rtc.ui.home.RegistrarFragment"
        android:label="Brindar mis servicios"
        tools:layout="@layout/fragment_registrar" />
    <!--android:label="fragment_registrar"-->
    <fragment
        android:id="@+id/visualizarFragment"
        android:name="com.rtc.ui.home.VisualizarFragment"
        android:label="Visualizar Servicio"
        tools:layout="@layout/fragment_visualizar" >
        <action
            android:id="@+id/action_visualizarFragment_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <argument
            android:name="rtcHome"
            app:argType="com.rtc.model.rtcHome" />
    </fragment>
</navigation>