<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoacceder"
    tools:context=".opcionAcceder">

    <Button
        android:id="@+id/bt_google"
        android:layout_width="370dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/blanco"
        android:drawableLeft="@drawable/ic_google"
        android:fontFamily="@font/centuryregular"
        android:text="@string/continuarGoogle"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="323dp"
        android:layout_height="271dp"
        android:fontFamily="@font/centurybold"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="92dp"
        android:fontFamily="@font/centuryregular"
        android:text="@string/slogan2"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/bt_inicio"
        android:layout_width="370dp"
        android:layout_height="58dp"
        android:drawableLeft="@drawable/ic_mail"
        android:fontFamily="@font/centuryregular"
        android:text="@string/continuarCorreo"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />
</androidx.constraintlayout.widget.ConstraintLayout>